# jax_ffi_experiments

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  gibbs_sampler_JAX_cpu.py  gibbs_sampler_JAX_gpu.py  gibbs_sampler_c_from_JAX.py  gibbs_sampler_cpp.cpp  gibbs_sampler_test.py
lib/: BUILD.bazel  gibbs_sampler.cpp  gibbs_sampler.h  gibbs_sampler_xla.cpp  gibbs_sampler_xla.h  gibbs_sampler_xla_pybind.cc
