load("@rules_cc//cc:defs.bzl", "cc_library")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@pybind11_bazel//:build_defs.bzl", "pybind_library")

cc_library(
    name = "gibbs_sampler_lib",
    srcs = ["gibbs_sampler.cpp"],
    hdrs = [
        "gibbs_sampler.h",
    ],
    includes = ["."],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "gibbs_sampler_xla_lib",
    srcs = ["gibbs_sampler_xla.cpp"],
    hdrs = [
        "gibbs_sampler_xla.h",
        "xla/ffi/api/c_api.h",
        "xla/ffi/api/ffi.h",
        "xla/ffi/api/api.h",
    ],
    includes = ["."],
    copts = ["-std=c++17 -rdynamic"], # -rdynamic to use extern
    deps = ["//lib:gibbs_sampler_lib"],
    visibility = ["//visibility:public"],
)

pybind_extension( # must be in two steps (first pybind_library then pybind_extension)
    name = "gibbs_sampler", # must match the pybind module name
    srcs = ["gibbs_sampler_xla_pybind.cc"],
    deps = ["//lib:gibbs_sampler_xla_lib"],
    copts = ["-std=c++17 -rdynamic"]
)

cc_library(
    name = "rms_norm_lib",
    srcs = ["rms_norm.cc"],
    hdrs = [
        "rms_norm.hpp",
        "xla/ffi/api/c_api.h",
        "xla/ffi/api/ffi.h",
        "xla/ffi/api/api.h",
    ],
    includes = ["."],
    copts = ["-std=c++17"]
)

pybind_extension( # must be in two steps (first pybind_library then pybind_extension)
    name = "rms_norm", # must match python module name
    srcs = ["rms_norm_pybind.cc"],
    deps = ["//lib:rms_norm_lib"],
    copts = ["-std=c++17"]
)
